[package]
name = "git-linecat"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2"
serde = { version = "*", features = ["derive"]}
serde_json = "1.0"
recap = "0.1"